"Estoy actualizando porque habian duplicados"

--- a/html-boilerplate/My first website/index.html
+++ b/html-boilerplate/My first website/index.html
@@ -1,14 +1,13 @@
 <!DOCTYPE html>
-
-<html>
+<html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <title>My First Website</title>
+     Prueba 
 </head>
 
 <body>
-    My First Website
+    <h1> Story of my life</h1>
+    <p> Once upon a time, I wanted to be happy, bot most of people surrounding me didn't this so far </p>
+    <p> I've been trying to learn coding skills and I think I'm achieving on that.</p>
 </body>
-
 </html>
